logs/aircable-library-op.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aircable_library_op-0.1.6.egg-info'...
Listing './lib/python3.5/site-packages/net'...
Listing './lib/python3.5/site-packages/net/aircable'...
Compiling './lib/python3.5/site-packages/net/aircable/autoreload.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (autoreload.py, line 70)
Compiling './lib/python3.5/site-packages/net/aircable/fields.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (fields.py, line 30)
Listing './lib/python3.5/site-packages/net/aircable/openproximity'...
Compiling './lib/python3.5/site-packages/net/aircable/openproximity/pluginsystem.py'...
***   File "./lib/python3.5/site-packages/net/aircable/openproximity/pluginsystem.py", line 35
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/net/aircable/openproximity/signals'...
Compiling './lib/python3.5/site-packages/net/aircable/procworker.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (procworker.py, line 20)
Compiling './lib/python3.5/site-packages/net/aircable/sdp.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sdp.py, line 50)
Listing './lib/python3.5/site-packages/net/aircable/spp'...
Compiling './lib/python3.5/site-packages/net/aircable/spp/sppBase.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sppBase.py, line 48)
Compiling './lib/python3.5/site-packages/net/aircable/spp/sppClient.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sppClient.py, line 53)
Compiling './lib/python3.5/site-packages/net/aircable/spp/sppServer.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sppServer.py, line 51)
Compiling './lib/python3.5/site-packages/net/aircable/utils.py'...
***   File "./lib/python3.5/site-packages/net/aircable/utils.py", line 65
    print "Doing logging base setup"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/net/aircable/wrappers.py'...
***   File "./lib/python3.5/site-packages/net/aircable/wrappers.py", line 48
    print adapter, adapter.aircable
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
